--- a/index.html
+++ b/index.html
@@ -1,9 +1,72 @@
-<html>
-
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>ENG150-Final Project by Julia Jiang</title>
+    <link rel="stylesheet" href="index.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Irish+Grover&display=swap" rel="stylesheet">
+</head>
 <body>
-  <h1>Julia Jiang</h1>
-  <p>Welcome to my website:D!</p>
-  <img src="https://content.codecademy.com/articles/github-pages-via-web-app/happy-ice-cream.gif" />
-</body>
+    <title>ENG150-Final Project by Julia Jiang</title>
+    <!-- section 1: the header with title -->
+    <section class="header">
+        <h1 id="title">MODERNISM</h1>
+        <h3 id="theme">what does Modernism mean to society, masculinity, feminism, narratives, race, class, and power?</h3>
+    </section>
 
+    <!-- section 2: the body-->
+    <section class="body">
+        <section class="pre-WW1">
+            <div class="title">
+                <h3>Pre-WW1</h3>
+            </div>
+            <div class="container">
+                <div class="column">
+
+                    <div class="rectangular JE" id="JE-box">
+                        <button class="book" id="JE"><a href="janeEyre.html"><span>JANE EYRE</span></a></button>
+                    </div>
+
+                
+                </div>
+            </div>
+        </section>
+
+        <section class="post-WW1">
+            <div class="title">
+                <h3>Post-WW1</h3>
+            </div>
+
+            <div class="container">
+                <div class="row">
+                    <div class="rectangular WSS">
+                        <button class="book" id="WSS"><a href="wss.html"><span>WIDE SARGASSO SEA</span></a></button>
+                    </div>
+                    <div class="rectangular MD">
+                        <button class="book" id="MD"><a href="md.html"><span>MRS DALLOWAY</span></a></button>
+                    </div>
+                    <div class="rectangular TRUST">
+                        <button class="book" id="TRUST"><a href="trust.html"><span>TRUST</span></a></button>
+                    </div>
+                </div>
+            </div>
+        </section>
+    </section>
+    <!-- section 3: breadcrumb -->
+    <ul class="breadcrumb">
+        <li class="location"><a href="">current page</a></li>
+        <li class="location"><a href="janeEyre.html">Jane Eyre</a></li>
+        <li class="location"><a href="md.html">Mrs Dalloway</a></li>
+        <li class="location"><a href="trust.html">Trust</a></li>
+        <li class="location"><a href="wss.html">Wide Sargasso Sea</a></li>
+    </ul>
+
+    <!-- section 4: copyright -->
+    <section class="copyright">
+        <p>&copy; 2024 ENG150-Final Project by Julia Jiang</p>
+    </section>
+</body>
 </html>
